Fix css alignment in profile-menu and fav-div

--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -14,10 +14,10 @@ link, canvas {
   background: transparent;
 }
 
-@viewport {
-  width: device-width;
-  zoom: 1;
-}
+// @viewport {
+//   width: device-width;
+//   zoom: 1;
+// }
 
 $white: #fff;
 $black: #000;
@@ -43,6 +43,12 @@ li {
   content: "";
   clear: both;
   display: block;
+}
+
+button {
+  cursor: pointer;
+  font-size: 14px;
+  color: $white;
 }
 
 button:focus {
@@ -97,7 +103,7 @@ button:focus {
   color: $white;
   height: 35px;
   width: 100%;
-  line-height: 32px;
+  line-height: 35px;
   vertical-align: middle;
 }
 
@@ -139,9 +145,8 @@ button:focus {
   height: 35px;
   width: 120px;
   li {
-    margin: 0px 5px;
-    vertical-align: middle;
-    font-size: 13px;
+    margin-left: 10px;
+    font-size: 14px;
     width: 20px;
     button:hover {
       color: $hover-blue;
@@ -154,7 +159,7 @@ button:focus {
 
 #current-track {
   height: 35px;
-  margin-left: 10px;
+  margin-left: 15px;
   li {
     display: inline-block;
     margin-right: 7px;
@@ -163,12 +168,6 @@ button:focus {
       color: $hover-blue;
     }
   }
-}
-
-button {
-  cursor: pointer;
-  font-size: 14px;
-  color: $white;
 }
 
 .player-button {
@@ -191,15 +190,21 @@ button {
   background: $primary-gray;
   width: 80px;
   height: 35px;
-  figure {
+  a, figure {
+    line-height: 35px;
+    vertical-align: middle;
     display: inline-block;
-    margin-left: 10px;
+    height: inherit;
+  }
+  figure {
+    margin-left: 15px;
     img {
+      max-height: 30px;
+      max-width: 30px;
       border: 1px solid $medium-gray;
-      max-height: 25px;
-      max-width: 25px;
     }
   }
+
   .profile-list {
     border: 1px solid $primary-gray;
     display: none;
@@ -349,7 +354,7 @@ label {
   .track-detail-container {
     display: flex;
     flex-direction: column;
-    width: 530px;
+    width: 525px;
     .track-artist {
       font-size: 14px;
       color: $primary-gray;
@@ -395,26 +400,23 @@ label {
     }
   }
   .fav-div {
-    width: 70px;
-    height: 30px;
+    width: 90px;
+    height: 24px;
     color: $medium-gray;
-    display: flex;
-    background: transparent;
-    justify-content: space-between;
-    p {
-      margin-top: 5px;
-      font-size: 14px;
-    }
-    button {
-      font-size: 24px;
-      line-height: 24px;
-      color: $medium-gray;
-    }
-    button:hover {
-      color: $hover-blue;
-    }
-    .fav-modal {
-      padding-right: 7px;
+    li {
+      display: inline-block;
+      font-size: 16px;
+      width: 24px;
+      margin-right: 5px;
+      text-align: right;
+      button {
+        font-size: 24px;
+        line-height: 24px;
+        color: $medium-gray;
+      }
+      button:hover {
+        color: $hover-blue;
+      }
     }
   }
 }
